Entrega final: HTML, SASS y optimizaciones, lista para publicar

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <html lang="es">
 <head>
  <meta charset="UTF-8" />
+ <meta name="description" content="Pet Shop - Tienda de mascotas con los mejores productos, alimentos, accesorios y atención. ¡Promociones y envíos a todo el país!">
  <meta name="viewport" content="width=device-width, initial-scale=1" />
- <title>Proyecto Pet Shop</title>
+ <meta name="keywords" content="mascotas, pet shop, gatos, perros, alimentos, accesorios, farmacia, agro">
+<title>Pet Shop | Productos, Alimentos y Accesorios para Mascotas</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
  <link rel="stylesheet" href="style/style.css" />
+ <link rel="canonical" href="https://TUSITIO.COM/" />
+
 </head>
-<body>
+<body class="pagina-index">
+
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
   <div class="container-fluid">
@@ -46,7 +51,7 @@
  <section class="index-header-content">
 <h1 class="fw-semibold fs-3">¡10% OFF EN TODA LA WEB!</h1>
    <p class="index-parrafo-header">DEL 15 AL 31 DE JULIO</p>
-   <button class="btn-header">Ver más</button>
+<button class="btn-header" aria-label="Ver ofertas y promociones">Ver más</button>
  </section>
 </header>
 
@@ -60,64 +65,104 @@
    <main class="index-main px-3">
      <h2 class="descubri-todos-nuestros-productos-titulo">Descubrí todos nuestros productos</h2>
      <section class="lo-mas-vendido-container">
-       <div class="card-items">
-         <img src="images/braveryperro.webp" alt="Bravery perro adulto" />
-         <div class="card-items-content">
-           <h3 class="mt-2">Bravery perro adulto 2kg</h3>
-           <p class="card-items-precio"><span>$1990</span> $1790</p>
-           <p class="card-items-descripcion">Alimento perros adultos todas las razas.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
+  
 
 
        <div class="card-items">
-         <img src="images/gemongato.webp" alt="Gemon gato adulto" />
-         <div class="card-items-content">
-           <h3 class="mt-2">Gemon gato adulto 7kg</h3>
-           <p class="card-items-precio"><span>$2440</span> $2249</p>
-           <p class="card-items-descripcion">Ideal para gatos adultos exigentes.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
+  <img src="images/braveryperro.webp" alt="Bravery perro adulto" />
+  <div class="card-items-content">
+    <h3 class="mt-2">Bravery perro adulto 2kg</h3>
+    <p class="card-items-precio"><span>$1990</span> $1790</p>
+    <p class="card-items-descripcion">Alimento perros adultos todas las razas.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Bravery%20perro%20adulto%202kg"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar Bravery perro adulto 2kg por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
 
+<div class="card-items">
+  <img src="images/gemongato.webp" alt="Gemon gato adulto" />
+  <div class="card-items-content">
+    <h3 class="mt-2">Gemon gato adulto 7kg</h3>
+    <p class="card-items-precio"><span>$2440</span> $2249</p>
+    <p class="card-items-descripcion">Ideal para gatos adultos exigentes.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Gemon%20gato%20adulto%207kg"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar Gemon gato adulto 7kg por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
 
-       <div class="card-items">
-         <img src="images/farmacia.webp" alt="Antiparasitario Perros Simparica" />
-         <div class="card-items-content">
-           <h3 class="mt-2">Antiparasitario Perros Simparica</h3>
-           <p class="card-items-precio"><span>$1115</span> $989</p>
-           <p class="card-items-descripcion">Actúa sobre parásitos externos.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
-       <div class="card-items">
-         <img src="images/nyd.webp" alt="N&D Grain Free Adulto" />
-         <div class="card-items-content">
-           <h3 class="mt-2">N&D Grain Free Adulto  4kg</h3>
-           <p class="card-items-precio"><span>$3818</span> $3590</p>
-           <p class="card-items-descripcion">Alimento para perros premium sin granos.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
-       <div class="card-items">
-         <img src="images/acana.webp" alt="Acana Cat First Feast" />
-         <div class="card-items-content">
-           <h3 class="mt-2">Acana Cat First Feast 2kg</h3>
-           <p class="card-items-precio"><span>$1752</span> $1619</p>
-           <p class="card-items-descripcion">Alimento protéico para gatos cachorros.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
-       <div class="card-items">
-         <img src="images/alfombra.webp" alt="Alfombra para Arena Sanitaria" />
-         <div class="card-items-content">
-           <h3 class="mt-2">Alfombra para Arena Sanitaria</h3>
-           <p class="card-items-precio"><span>$795</span> $699</p>
-           <p class="card-items-descripcion">56x43cm, 100% lavable.</p>
-           <button class="card-items-btn">Comprar</button>
-         </div>
-       </div>
+<div class="card-items">
+  <img src="images/antiparasitario.webp" alt="Pipeta Perros Simparica" />
+  <div class="card-items-content">
+    <h3 class="mt-2">Pipeta Perros Simparica</h3>
+    <p class="card-items-precio"><span>$1115</span> $989</p>
+    <p class="card-items-descripcion">Actúa sobre parásitos externos.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Antiparasitario%20Perros%20Simparica"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar Antiparasitario Perros Simparica por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
+
+<div class="card-items">
+  <img src="images/nyd.webp" alt="N&D Grain Free Adulto" />
+  <div class="card-items-content">
+    <h3 class="mt-2">N&D Grain Free Adulto 4kg</h3>
+    <p class="card-items-precio"><span>$3818</span> $3590</p>
+    <p class="card-items-descripcion">Alimento para perros premium sin granos.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20N%26D%20Grain%20Free%20Adulto%204kg"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar N&D Grain Free Adulto 4kg por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
+
+<div class="card-items">
+  <img src="images/acana.webp" alt="Acana Cat First Feast" />
+  <div class="card-items-content">
+    <h3 class="mt-2">Acana Cat First Feast 2kg</h3>
+    <p class="card-items-precio"><span>$1752</span> $1619</p>
+    <p class="card-items-descripcion">Alimento protéico para gatos cachorros.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Acana%20Cat%20First%20Feast%202kg"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar Acana Cat First Feast 2kg por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
+
+<div class="card-items">
+  <img src="images/alfombra.webp" alt="Alfombra para Arena Sanitaria" />
+  <div class="card-items-content">
+    <h3 class="mt-2">Alfombra para Arena Sanitaria</h3>
+    <p class="card-items-precio"><span>$795</span> $699</p>
+    <p class="card-items-descripcion">56x43cm, 100% lavable.</p>
+    <a class="card-items-btn"
+       href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Alfombra%20para%20Arena%20Sanitaria"
+       target="_blank"
+       rel="noopener"
+       aria-label="Comprar Alfombra para Arena Sanitaria por WhatsApp">
+      Comprar
+    </a>
+  </div>
+</div>
 
 
 
@@ -150,20 +195,15 @@
     </div>
   </div>
 
-  <div class="footer-bottom">
-    <p class="footer-derechos">Todos los derechos reservados</p>
-    <img class="logotipo-footer" src="./images/logo.webp" alt="Logotipo Footer" />
-  </div>
+<div class="footer-bottom">
+  <p class="footer-derechos">Todos los derechos reservados</p>
+  <img class="logotipo-footer" src="./images/logo.webp" alt="Logotipo Footer" />
+  <img class="wpplogo" src="./images/wpplogo.webp" alt="WhatsApp">
+</div>
 
-    
-   </div>
-   <img class="wpplogo" src="/images/wpplogo.webp" alt="WhatsApp">
-
-   </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 
 </footer>
 
  </body>
 </html>
-
