--- a/pages/perros.html
+++ b/pages/perros.html
@@ -3,33 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Productos para Perros - Pet Shop</title>
+  <title>Proyecto Pet Shop - Productos para Perros</title>
+  <meta name="description" content="Amplia gama de alimentos y accesorios para perros en Proyecto Pet Shop. Calidad y precios accesibles para tu mascota." />
+  <meta name="keywords" content="perros, productos para perros, alimento, accesorios, cama, collar, pet shop" />
+  <link rel="icon" type="image/png" href="../images/logo.webp">
+  <link rel="canonical" href="https://TUSITIO.com/pages/perros.html" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../style/style.css" />
 </head>
-<body>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3">
+<body class="pagina-perros">
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0 z-3" role="navigation" aria-label="Menú principal de navegación">
   <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
       <img class="logotipo" src="../images/logo.webp" alt="Logotipo Pet Shop" />
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="gatos.html">Gatos</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#">Perros</a></li>
+        <li class="nav-item"><a class="nav-link active" href="perros.html">Perros</a></li>
         <li class="nav-item"><a class="nav-link" href="farmacia.html">Farmacia</a></li>
         <li class="nav-item"><a class="nav-link" href="agro.html">Agro</a></li>
       </ul>
@@ -37,58 +34,122 @@
   </div>
 </nav>
 
-<header class="gatos-header">
-  <section class="gatos-header-content">
+<header class="perros-header">
+  <section class="perros-header-content index-header-content">
     <h1 class="fw-semibold fs-3">Productos para Perros</h1>
-    <p class="gatos-parrafo-header">Comida, juguetes y salud para tu perro</p>
-    <button class="gatos-btn-header">Ver más</button>
+    <p class="perros-parrafo-header index-parrafo-header">Comida, higiene y más para tu perro</p>
+    <button class="perros-btn-header btn-header" aria-label="Ver productos para perros">Ver más</button>
   </section>
 </header>
-
-<div class="gatos-header-flex"></div>
 
 <main class="index-main px-3">
   <h2 class="descubri-todos-nuestros-productos-titulo">Lo mejor para tu perro</h2>
   <section class="lo-mas-vendido-container">
 
     <div class="card-items">
-      <img src="../images/braveryperro.webp" alt="Bravery perro adulto" />
+      <img src="../images/braveryperro.webp" alt="Bravery perro adulto 2kg" />
       <div class="card-items-content">
         <h3 class="mt-2">Bravery perro adulto 2kg</h3>
         <p class="card-items-precio"><span>$1990</span> $1790</p>
         <p class="card-items-descripcion">Alimento perros adultos todas las razas.</p>
-        <button class="card-items-btn">Comprar</button>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Bravery%20perro%20adulto%202kg"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar Bravery perro adulto 2kg por WhatsApp">
+          Comprar
+        </a>
       </div>
     </div>
 
     <div class="card-items">
-      <img src="../images/nyd.webp" alt="N&D Grain Free Adulto" />
+      <img src="../images/nyd.webp" alt="N&D Grain Free Adulto 4kg" />
       <div class="card-items-content">
         <h3 class="mt-2">N&D Grain Free Adulto 4kg</h3>
         <p class="card-items-precio"><span>$3818</span> $3590</p>
         <p class="card-items-descripcion">Alimento para perros premium sin granos.</p>
-        <button class="card-items-btn">Comprar</button>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20N%26D%20Grain%20Free%20Adulto%204kg"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar N&D Grain Free Adulto 4kg por WhatsApp">
+          Comprar
+        </a>
       </div>
     </div>
 
     <div class="card-items">
-      <img src="../images/antiparasitario.webp" alt="Antiparasitario Perros" />
+      <img src="../images/panales.webp" alt="Pañales para perros x15" />
       <div class="card-items-content">
-        <h3 class="mt-2">Antiparasitario Perros Simparica</h3>
-        <p class="card-items-precio"><span>$1115</span> $989</p>
-        <p class="card-items-descripcion">Actúa sobre parásitos externos.</p>
-        <button class="card-items-btn">Comprar</button>
+        <h3 class="mt-2">Pañales para perros x15</h3>
+        <p class="card-items-precio"><span>$890</span> $749</p>
+        <p class="card-items-descripcion">Gel Absorbente de larga duración.</p>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Pañales%20para%20perros%20x15"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar Pañales para perros x15 por WhatsApp">
+          Comprar
+        </a>
+      </div>
+    </div>
+
+    <div class="card-items">
+      <img src="../images/jugueteperro.webp" alt="Juguete para perros" />
+      <div class="card-items-content">
+        <h3 class="mt-2">Juguete para perros</h3>
+        <p class="card-items-precio"><span>$890</span> $799</p>
+        <p class="card-items-descripcion">Ideal para mantener a tu perro activo y feliz.</p>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Juguete%20para%20perros"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar Juguete para perros por WhatsApp">
+          Comprar
+        </a>
+      </div>
+    </div>
+
+    <div class="card-items">
+      <img src="../images/camaperro.webp" alt="Cama para perros" />
+      <div class="card-items-content">
+        <h3 class="mt-2">Cama para perros</h3>
+        <p class="card-items-precio"><span>$1590</span> $1490</p>
+        <p class="card-items-descripcion">Cómoda y lavable, perfecta para descansar.</p>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Cama%20para%20perros"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar Cama para perros por WhatsApp">
+          Comprar
+        </a>
+      </div>
+    </div>
+
+    <div class="card-items">
+      <img src="../images/collarperro.webp" alt="Collar para perros" />
+      <div class="card-items-content">
+        <h3 class="mt-2">Collar para perros</h3>
+        <p class="card-items-precio"><span>$690</span> $649</p>
+        <p class="card-items-descripcion">Ajustable y resistente para paseos seguros.</p>
+        <a class="card-items-btn"
+           href="https://wa.me/5491133344455?text=Hola,%20quiero%20comprar%20Collar%20para%20perros"
+           target="_blank"
+           rel="noopener"
+           aria-label="Comprar Collar para perros por WhatsApp">
+          Comprar
+        </a>
       </div>
     </div>
 
   </section>
 </main>
 
-<footer class="footer">
+<footer class="footer" role="contentinfo" aria-label="Información de contacto y medios de pago">
   <div class="footer-container-grid">
     <div class="footer-section">
       <h4>Sobre nosotros</h4>
-      <p>Somos una tienda especializada en productos para mascotas.</p>
+      <p>Somos una tienda especializada en productos para mascotas, tanto alimentos como accesorios e higiene, entre otros.</p>
     </div>
     <div class="footer-section">
       <h4>Medios de pago</h4>
@@ -103,9 +164,8 @@
   <div class="footer-bottom">
     <p class="footer-derechos">Todos los derechos reservados</p>
     <img class="logotipo-footer" src="../images/logo.webp" alt="Logotipo Footer" />
+    <img class="wpplogo" src="../images/wpplogo.webp" alt="Logo WhatsApp" />
   </div>
-
-  <img class="wpplogo" src="../images/wpplogo.webp" alt="WhatsApp" />
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
